--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,22 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsx index.ts",
     "dev": "tsx watch index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "type": "module",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
-    "nodemon": "^3.1.11",
     "pg": "^8.16.3",
     "puppeteer": "^24.34.0",
     "socket.io": "^4.8.3"
@@ -31,16 +25,15 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^25.0.3",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^20.11.30",
     "@types/node-cron": "^3.0.11",
-    "@types/nodemailer": "^7.0.5",
-    "@types/pg": "^8.16.0",
+    "@types/nodemailer": "^6.4.14",
+    "@types/pg": "^8.11.6",
     "@types/puppeteer": "^5.4.7",
-    "@types/socket.io": "^3.0.1",
-    "ts-node": "^10.9.2",
+    "@types/socket.io": "^3.0.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
